
 697.	[bug]		nsupdate was not compatible with the undocumented
			BIND 8 behavior of ignoring TTLs in "update delete"
			commands. [RT #693]

 696.	[bug]		lwresd would die with an assertion failure when passed
			a zero-length name.  [RT #692]

 695.	[bug]		If the resolver attempted to query a blackholed or
			bogus server, the resolution would fail immediately.

 694.	[bug]		$GENERATE did not produce the last entry.
			[RT #682, #683]

 693.	[bug]		An empty lwres statement in named.conf caused
			the server to crash while loading.

 692.	[bug]		Deal with systems that have getaddrinfo() but not
			gai_strerror(). [RT #679]

 691.	[bug]		Configuring per-view forwarders caused an assertion
			failure. [RT #675]

 690.	[func]		$GENERATE now supports DNAME. [RT #654]

 689.	[doc]		man pages are now installed. [RT #210]

 688.	[func]		"make tags" now works on systems with the
			"Exuberant Ctags" etags.

 687.	[bug]		Only say we have IPv6, with sufficent functionality,
			if it has actually been tested.  [RT #586]

 686.	[bug]		dig and nslookup can now be properly aborted during
			blocking operations. [RT #568]

 685.	[bug]		nslookup should use the search list/domain options
			from resolv.conf by default. [RT #405, #630]

 684.	[bug]		Memory leak with view forwarders. [RT #656]

 683.	[bug]		File descriptor leak in isc_lex_openfile().

 682.	[bug]		nslookup displayed SOA records incorrectly. [RT #665]

 681.	[bug]		$GENERATE specifying output format was broken. [RT #653]

 680.	[bug]		dns_rdata_fromstruct() mishandled options bigger
			than 255 octets.

 679.	[bug]		$INCLUDE could leak memory and file descriptors on
			reload. [RT #639]

 678.	[bug]		"transfer-format one-answer;" could trigger an assertion
			failure. [RT #646]

 677.	[bug]		dnssec-signzone would occasionally use the wrong ttl
			for database operations and fail. [RT #643]

 676.	[bug]		Log messages about lame servers to category
			'lame-servers' rather than 'resolver', so as not